kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sresource
  namespace: default
  labels:
    app: sresource
  annotations:
    description: "SRESource documentation service"
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: sresource
  sessionAffinity: None
